--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
 HOST=localhost
-USER=web_app
-PASSWORD=pass123
-DATABASE=registration
+USER=web_apps
+PASSWORD=pass12345
+DATABASE=registration1
 DB_PORT=3306
